@@ -1,5 +1,7 @@
 package views;
 
+//--module-path "/home/erick/Projeto/javafx-sdk-14.0.2.1/lib" --add-modules javafx.controls,javafx.fxml
+
 import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Scene;
